# SeaBattleML

./: .gitignore  CMakeLists.txt
src/: board.cpp  board.h  bot.cpp  bot.h  features.cpp  features.h  game.cpp  game.h  learn.cpp  learn.h  main.cpp  options.cpp  options.h  render.cpp  render.h  tools.cpp  tools.h  types.h
